# Mentoring

./: test.py
HW1/: HBA.py  jones.py  task_3.py
HW2/: decorators.py  subarray.py
HW4/: Snoop.py  file.py  snoop279.txt  strings.py
HW5/: differentiation.py
HW6/: graphs.py
HW7/: contextManager.py  example.txt  ook.py
HW8/: client.py  echo.py  light_corutines.py  test.py
compose-lab/: docker-compose.yml
dockerHW/: Dockerfile
dockerHW/webfiles/: index.html
titanic/: .pre-commit-config.yaml  README.md  pyproject.toml
titanic-tutorial/: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
titanic-tutorial/data/: predictions.csv
titanic-tutorial/src/.github/: main_test_only.yml
titanic-tutorial/src/tests/: conftest.py  test_operations.py  test_preprocess.py
titanic-tutorial/src/titanic/: constants.py  operations.py
titanic-tutorial/src/titanic_tutorial/: main.py  operations.py  preprocess.py
titanic/data/: predictions.csv
titanic/titanic/: predictions.py
