[tool.poetry]
name = "titanic"
version = "0.1.0"
description = ""
authors = ["Alikhan Aitbayev <y>"]
readme = "README.md"

[tool.mypy]
strict = true

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
numpy = "^1.26.4"
typer-cli = "^0.0.13"
mypy = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
